<resources>
    <string name="app_name">CRMlite</string>
    <string name="action_settings">Settings</string>
    <string name="name">Nombre</string>
    <string name="business_name">Nombre Comercial</string>
    <string name="rfc">RFC</string>
    <string name="notes">Notas</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
