<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="1000dp"
    android:minWidth="1000dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.iangclifton.android.floatlabel.FloatLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/margin_medium"
                android:id="@+id/etName"/>
            <com.iangclifton.android.floatlabel.FloatLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business_name"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/margin_medium"
                android:id="@+id/etBusinessName"/>
            <com.iangclifton.android.floatlabel.FloatLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rfc"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/margin_medium"
                android:id="@+id/etRFC"/>
            <com.iangclifton.android.floatlabel.FloatLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/margin_medium"
                android:id="@+id/etNotes"/>


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:text="@string/save"
            android:id="@+id/btnSave"/>

    </LinearLayout>

</LinearLayout>